--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,9 @@ header .icon-nav span{
   }
 }
 @media (max-width: 500px){
+   .hero{
+    top: 70px;
+  }
   .hero .container .box h1{
     font-size: 2.2rem;
   }
